--- a/MovingShapes/MovingShapes.csproj
+++ b/MovingShapes/MovingShapes.csproj
@@ -8,6 +8,7 @@
     <Authors>Pavshuk Egor</Authors>
     <NeutralLanguage>en</NeutralLanguage>
     <ApplicationIcon>shapes.ico</ApplicationIcon>
+    <Version>1.1.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,6 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Logging\Logs\" />
     <Folder Include="SavedFiles\" />
   </ItemGroup>
 
